mobile: fix links & capitalisation

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -11,34 +11,32 @@ Ways to have the schedule with you at all times, without wasting trees:
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">google play</a>.<br />
-    Older release available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
 </li>
 <li><b>Android: Giggity</b><br />
-    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">google play</a>,<br />
-    Available from F-droid market, also has direct <a href="https://f-droid.org/en/packages/net.gaast.giggity/">apk download</a>.<br />
+    <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
 </li>
-<li><b>Progressive web app: Sojourner</b><br />
+<li><b>Progressive Web App: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    <a href="https://fosdem.sojourner.rocks">progressive web app</a><br />
+    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
 </li>
 <li><b>iPhone: fosdem-org</b><br />
     <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
+    Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br />
 </li>
 <li><b>Ubuntu Phone: FOSDEM</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">Ubuntu app store</a>.<br />
+    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
 </li>
 <li><b>Windows Phone: FOSDEM</b><br />
     <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
-    Older release available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
+    Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
-    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
+    <a href="https://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
     Available in official Debian, Ubuntu and Maemo5 repositories,<br />
-    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
+    (the successor of <a href="https://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
 </li>
 </ul>
 
@@ -58,25 +56,25 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 <li><b>Android: FOSDEM Schedule (2019)</b><br />
     <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2019">Source code</a>,<br />
     Available from the <a
-    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">google play</a>.<br />
+    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a>.<br />
 </li>
 <li><b>Generic mobile web interface (2018)</b><br />
     <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
 </li>
 <li><b>Android: fosdem-android</b><br />
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
-    <a href="https://github.com/rkallensee/fosdem-android">Github fork of 2013</a>,<br />
-    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">the android market</a>.<br />
+    <a href="https://github.com/rkallensee/fosdem-android">GitHub fork of 2013</a>,<br />
+    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">APK download</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">Google Play</a>.<br />
 </li>
 <li><b>iPhone: fosdem-iphone</b><br />
     <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple market</a>.<br />
+    Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple Store</a>.<br />
 </li>
 <li><b>WebOS: fosdem-webos</b><br />
     <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
     Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
-    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a>.<br />
+    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">IPK download</a>.<br />
 </li>
 <li><b>N9/N950: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br />
