practical: update job corner location

--- a/content/practical/jobcorner.html
+++ b/content/practical/jobcorner.html
@@ -4,7 +4,7 @@ title: Job Corner
 
 <p>Businesses will be again able to inform visitors about open source
 employment or contracting opportunities in our &quot;job corner&quot; at
-<%= conference[:title] %>. It will be located next to the O'Reilly stand
+<%= conference[:title] %>. It will be located 
 in the H building.</p>
 
 <p>There are some rules on what is permissible, as outlined below, but most
