Sunday sightseeing update

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -50,7 +50,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-<b>The Sunday tour</b> starts at 12:30. We'll discover some of the monuments in the city center, interrupted by a short coffee break. More details to follow.
+<b>The Sunday tour</b> starts at 12:30. We'll discover the area closer to the ULB and visit <a href="https://en.wikipedia.org/wiki/Villa_Empain">Villa Empain</a>, a museum in an impressive art deco building nearby, interrupted by a short coffee break.
   We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
