Expand devroom manual with procedure for amendments

--- a/content/manuals/program/devroom.html
+++ b/content/manuals/program/devroom.html
@@ -575,6 +575,126 @@ Don't put '?' in a slug.</dd>
      <dt>Event with missing unique tag (slug)</dt>
 <dd>Make sure you use a valid <a href="#slug">SLUG</a></dd>
 
+<h2>Last weeks before the event</h2>
+<div class="alert-info">
+ Note that this procedure is in place now for FOSDEM 2020.
+</div>
+<p>
+Once the booklet sent to the printer and the schedule is imported in all apps, all changes to the schedule will be recorded in this page:
+<a href="https://fosdem.org/2020/schedule/amendments/">https://fosdem.org/2020/schedule/amendments/</a>.
+</p>
+<p>
+For any changes you make from now on, please follow these instructions.
+(You should NOT do this for any changes you made already - just
+for future changes.)
+</p>
+<p>
+Take a look at last year's page to understand better what we're trying to
+achieve with this:
+  https://archive.fosdem.org/2019/schedule/amendments/
+</p>
+<p>
+From now on, all changes to the schedule - i.e. topics/speakers - must
+be tracked and explained on the website, with both old and new shown.
+(Abstracts, biographies, URLs etc, can continue to be edited and
+improved without doing anything special.  Event titles should only be
+changed in minor ways - otherwise it counts as an AMENDMENT below.)
+</p>
+<p>
+Wherever a person looks on the website, there should be no confusion
+about what is cancelled and what has been changed.
+</p>
+<p>
+If a talk is cancelled:
+</p>
+<p>
+We have two cases.
+<ol>
+    <li> There is NO replacement.
+        <ul>
+          <li>Add the prefix CANCELLED to the title.</li>
+          <li>Not in brackets - exactly that one word in front followed by one space character.</li>
+          <li>That's all.  Do NOT change any other state of the event,
+              because we want these events still to appear in the schedule.</li>
+          <li>Add a note to the abstract so that it is absolutely clear it has
+              been cancelled.  E.g. Top line might be "Please note that this
+ 	          talk has been cancelled as &lt;speaker&gt; is no longer able to
+              attend FOSDEM."</li>
+          <li>Notify speakers@fosdem.org ideally giving the URL to the
+ 	 pentabarf event that was changed e.g. https://penta.fosdem.org/event/edit/4147
+     (We will try to check the steps were followed and fix where necessary)</li>
+        </ul>
+    </li>
+
+    <li>There IS a replacement.
+        <ul>
+          <li>Add the prefix CANCELLED to the title.</li>
+          <li>Not in brackets - exactly that one word in front followed by
+              one space character.</li>
+          <li>Set 'progress' to 'canceled' (keep it 'accepted').</li>
+          <li>For each speaker or moderator on the person tab, set 'role state'
+              to 'canceled'.</li>
+          <li>On the schedule tab, set the room to blank (top of the list) and
+              uncheck 'public event'.  *Leave the day and time unchanged.* 
+              Save those changes.  The event will no longer appear in the
+              schedule on the website. </li>
+        </ul>
+    <br/>
+      For the replacement, enter the details in the normal way but:
+      <ul>
+          <li>Add the prefix 'AMENDMENT' to the event title.</li>
+          <li>At the *end* of the abstract, include some text that describes
+              exactly the talk it replaced, with the full title and speaker
+              matching that of the cancelled event.  Whether or not to
+              give an apology or reason will depend on the circumstances.
+              Example: "Please note that this talk replaces one entitled
+              "title" that was due to have been given by &lt;speaker&gt;, who has
+              sent his apologies but is now unable to attend as he has fallen
+              ill.  We wish him a speedy recovery."</li>
+          <li>Email speakers@fosdem.org with details, for example, the penta
+              URLs for both events.</li>
+      </ul>
+</ol>
+<p>
+    For a completely new session or a minor timing adjustment, e.g. filling
+    a gap in the published schedule or before or after the original
+    schedule, enter the details in the normal way but:
+    <ul>
+        <li>Add the prefix 'AMENDMENT' to the event title.</li>
+        <li>At the end of the abstract explain the change e.g. "Please
+            note that this is a late addition to the schedule, and the
+            programme will now be starting 30 minutes earlier than
+            originally scheduled."</li>
+        <li>Email speakers@fosdem.org with details e.g. the penta URLs for
+            the events.</li>
+    </ul>
+</p>
+<p>
+If two speakers swap slots:
+<ul>
+    <li>Add the prefix 'AMENDMENT' to both event titles.</li>
+    <li>At the end of each abstract explain the change</li>
+        e.g. "Please note that this talk was originally scheduled to be
+        given at...  The talk originally in this slot, &gt;title hi&lt; by &gt;speaker&lt;
+        will now take place at..."</li>
+    <li>Email speakers@fosdem.org with details e.g. the penta URLs for
+        the events.</li>
+</p>
+<p>
+    You should use the 'Notes' field in pentabarf to explain what's happened
+    (eg "Email from speaker 2020/01/24 - too ill to travel - agk") and add any
+    further information / cross-references.
+</p>
+<p>
+    It is important to continue to follow this process during the event
+    itself so that correct information appears to people watching the live
+    streams and to the volunteers performing the video cutting.
+</p>
+<p>
+    If you have talks in reserve, it's a good idea to put them into the
+    system in advance in state 'undecided/candidate' so you can quickly
+    publish them as an AMENDMENT if the need arises.
+</p>
 <h2>During the event</h2>
 <h3 id="timekeeping">Timekeeping</h3>
 <p>
