update mobile schedule app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -13,6 +13,11 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
 </li>
+<li><b>Android: FOSDEM Schedule (CampFahrPlan)</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2020">Source code</a>,<br />
+    Available from the <a
+    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a>.<br />
+</li>
 <li><b>Android: Giggity</b><br />
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
@@ -52,11 +57,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
-</li>
-<li><b>Android: FOSDEM Schedule (2019)</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2019">Source code</a>,<br />
-    Available from the <a
-    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a>.<br />
 </li>
 <li><b>Generic mobile web interface (2018)</b><br />
     <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
