some fixes to beerevent added beerevent page to navigation

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -34,8 +34,9 @@ opportunity to taste some of the finest
 </p>
 
 <p>
-  For efficiency reasons, the available beers are limited.
+  For efficiency reasons, the number of different beers is limited.
 </p>
+<br><br>
 <p>For this edition, these beers have been selected and await your judgement:
 </p>
 <p>
@@ -59,7 +60,7 @@ opportunity to taste some of the finest
 </ul>
 </p>
 
-<h2>Virtual Beer Distribution Algorithm v3.3 (stable)</h2>
+<h2>Virtual Beer Distribution Algorithm v3.3.99.beta</h2>
 
 <p>
   After about twenty years of incremental improvements to our notorious Beer
@@ -131,6 +132,7 @@ opportunity to taste some of the finest
     <li>
       <a href="https://www.google.com/maps/place/ING+Bruxelles+Anspach/@50.8494376,4.3514569,17z/data=!4m5!3m4!1s0x0:0x531b78a696b40f83!8m2!3d50.8501534!4d4.3523086">ING Bank, Rue de l'Evêque 24, Bruxelles, Belgium</a>
     </li>
+  </ul>
 </p>
 
 <h2>Quality of Service</h2>
