add sailfish os schedule app, thanks to Neter

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -34,6 +34,10 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
     Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
 </li>
+<li><b>Sailfish OS: FOSDEM QML</b><br />
+	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
+	Available from the Sailfish Store.<br />
+</li>
 <li><b>Windows Phone: FOSDEM</b><br />
     <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
     Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br />
