Saturday tour fully booked

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -40,7 +40,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-  <b>The Saturday tour</b> starts at 12:30. This will be the popular tour of the beautifull city centre of Brussels.
+  <b>The Saturday tour is fully booked, sorry.</b> It starts at 12:30. This will be the popular tour of the beautifull city centre of Brussels.
   The guide will show you the main sights of Brussels. By foot, we will show you some of the city in just two hours. Potential places to see include: 
   • Grand Place • Town Hall • Maison du Roi • Comic art scene • The Stock Exchange • Galeries Saint Hubert 
   • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
