add another Android app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -22,6 +22,10 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
 </li>
+<li><b>Android: FOSDEM</b><br />
+    <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
+    Availalbel from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
+</li>
 <li><b>Progressive Web App: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
     Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
