--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -24,7 +24,7 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 <li><b>Android: FOSDEM</b><br />
     <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
-    Availalbel from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
 </li>
 <li><b>Progressive Web App: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
