--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -30,6 +30,9 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
     Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
 </li>
+<li><b>Generic mobile web interface</b><br />
+    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
+</li>
 <li><b>iPhone: fosdem-org</b><br />
     <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
     Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br />
@@ -65,9 +68,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
-</li>
-<li><b>Generic mobile web interface (2018)</b><br />
-    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
 </li>
 <li><b>Android: fosdem-android</b><br />
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
