add ncov 2019 item to practical

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -65,6 +65,24 @@ navcat: true
   <a href="page:practical/jobcorner">Job Corner</a> for details.
 </p>
 
+<a name="ncov"></a>
+<h3>Novel Coronavirus information (aka nCov-2019, Wuhan coronavirus)</h3>
+<p>
+  At the beginning of 2020 the World Health Organisation identified a new
+  virus spreading in the city of Wuhan, Hubei province of China.
+</p>
+<p>
+  As of Wed 29 Jan 2020, World Health Organisation and Belgian Government advice
+  do not indicate a threat serious enough to require any changes to FOSDEM.
+</p>
+<p>
+  We recommend that visitors who are concerned refer to
+  <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/travel-advice">
+    the World Health Organisation's travel advice
+  </a>
+  .
+</p>
+
 <a name="other"></a>
 <h3>Further information</h3>
 <p>
