update nCoV item

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -66,7 +66,7 @@ navcat: true
 </p>
 
 <a name="ncov"></a>
-<h3>Novel Coronavirus information (aka nCov-2019, Wuhan coronavirus)</h3>
+<h3>Novel Coronavirus information (aka 2019-nCoV, Wuhan coronavirus)</h3>
 <p>
   At the beginning of 2020 the World Health Organisation identified a new
   virus spreading in the city of Wuhan, Hubei province of China.
@@ -81,6 +81,14 @@ navcat: true
     the World Health Organisation's travel advice
   </a>
   .
+</p>
+<p>
+  <strong>If you are feeling unwell, please consider staying home or in your
+  hotel.</strong> We know it's frustrating but it is best to avoid spreading
+  illness, regardless of whether it's a cold, 2019-nCoV, or a more usual virus.
+  You can <a href="https://fosdem.org/2020/schedule/streaming/">watch video
+  live streams from all rooms</a> and use the #fosdem hashtag to participate in
+  conversation on social media.
 </p>
 
 <a name="other"></a>
