changed list of beers

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -36,7 +36,6 @@ opportunity to taste some of the finest
 <p>
   For efficiency reasons, the number of different beers is limited.
 </p>
-<br><br><br>
 <p>For this edition, these beers have been selected and await your judgement:
 </p>
 <p>
@@ -44,10 +43,10 @@ opportunity to taste some of the finest
  <li>Floris Cactus (Fruit Beer, 4.2%)</li>
  <li>Campus (Lager, 5%)</li>
  <li>Floris White (White Beer, 5%)</li>
+ <li>Pink Killer (Grapefruit Beer, 5%)</li>
  <li>Oud Beersel Lambic (Lambic/Sour, 5.7%)</li>
  <li>Precieux IPA Jack (India Pale Ale, 5.9%)</li>
  <li>Brugse Zot Blonde (Blonde Ale, 6%)</li>
- <li>Waterloo Recolte (White Beer, 6%)</li>
  <li>Averbode (Abbey Beer, Blonde Ale, 7.5%)</li>
  <li>Barbar (Honey Ale, 8%)</li>
  <li>Chimay Triple (Abbey Beer, 8%)</li>
@@ -77,9 +76,9 @@ opportunity to taste some of the finest
   this area FOSDEM-only. If you meet a volunteer or a guard at the entrance to the bar or
   at the entrace to the alley, make it clear that you are there for the
   FOSDEM party. Wearing appropriately geeky attire tends to do the trick, as does 
-  demonstrating your initiation into geekdom has been successful. If your attempt fails,
-  you'll get a second chance: your answers to some very tricky questions will determine
-  how you'll spend your Friday evening.
+  demonstrating your initiation into geekdom has been successful (vim forever!). i
+  If your attempt fails, you'll get a second chance: your answers to some very tricky 
+  questions will determine how you'll spend your Friday evening.
 </p>
 
 <h2>Beer Tokens</h2>
