tour fully booked

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -8,6 +8,8 @@ aliases: /sightseeing
     <span>&copy; <a href="http://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/brighton/4424281095/">Jim Linwood</a></span>
 </div>
 
+<p><em>SORRY, TOO LATE. THE FOSDEM 2020 TOURS ARE FULLY BOOKED.</em></p>
+
 <p>
   FOSDEM hires professional guides each year to offer free
   guided tours of Brussels to the spouses/partners of FOSDEM visitors.
@@ -40,7 +42,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-  <b>The Saturday tour is fully booked, sorry.</b> It starts at 12:30. This will be the popular tour of the beautifull city centre of Brussels.
+  <b>The Saturday tour</b> starts at 12:30. This will be the popular tour of the beautifull city centre of Brussels.
   The guide will show you the main sights of Brussels. By foot, we will show you some of the city in just two hours. Potential places to see include: 
   • Grand Place • Town Hall • Maison du Roi • Comic art scene • The Stock Exchange • Galeries Saint Hubert 
   • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
