--- a/content/index.html
+++ b/content/index.html
@@ -17,6 +17,13 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
     </div>
 
+    <div class="text-block">
+      <h2>Welcome to FOSDEM 2020!</h2>
+      <p><a href="page:/schedule/mobile">Mobile Apps</a>.</p>
+      <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.</p>
+      <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
+    </div>
+
     <%
     # Depending on the height of the sponsors graphic, general announcements
     # (distinct from "news" by virtue of being undated) should either go here
