Update room move for Sunday.

--- a/content/index.html
+++ b/content/index.html
@@ -20,7 +20,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p><a href="page:/schedule/mobile">Mobile Apps</a>.</p>
       <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.</p>
       <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
-      <p>The Quantum Computing devoom on Saturday and the Software Defined Storage room on Sunday have moved to UA2.118 (Henriot).</p>
+      <p>The Kotlin devroom has moved to UA2.118 (Henriot).</p>
     </div>
 
     <%
