--- a/content/schedule/amendments.html
+++ b/content/schedule/amendments.html
@@ -15,7 +15,7 @@ size = h.values.map(&:size).inject(:+)
 %>
 <h1><%= size %> Schedule Amendments</h1>
 
-<p>The Quantum Computing devoom on Saturday and the Software Defined Storage room on Sunday have moved to UA2.118 (Henriot).</p>
+<p>The Quantum Computing devoom on Saturday and the Kotlin room on Sunday have moved to UA2.118 (Henriot).</p>
 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
