--- a/content/index.html
+++ b/content/index.html
@@ -16,11 +16,25 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
 
-      <h2>Welcome to FOSDEM 2020!</h2>
-      <p><a href="page:/schedule/mobile">Mobile Apps</a>.</p>
-      <p><a href="page:/schedule/streaming">Live feeds</a> from all the rooms.</p>
-      <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
-      <p>The Kotlin devroom has moved to UA2.118 (Henriot).</p>
+        <h2>20 Years of FOSDEM</h2>
+	<img src="asset:2020cake" alt="" style="float:left; margin-right: 1em;"/>
+        <p>A big Thank You to everyone who made FOSDEM 2020 the best FOSDEM ever!  We hope you enjoyed the cake!</p>
+	<p> Please let us know about your FOSDEM experience at 
+	<a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+	All your feedback, good or bad, and suggestions for future years will be greatly appreciated.
+	Please also submit feedback on individual talks by following the links at the bottom of each event page in the schedule.
+	</p>
+
+	<h2>Videos</h2>
+	<p>We are adding a video of each talk to its web page when it is ready.  
+        See the <a href="https://review.video.fosdem.org/overview">processing status</a>
+	of individual talks.
+	For everything available so far, look in the right-hand column of 
+	the <a href="https://fosdem.org/2020/schedule/events/">complete schedule</a>,
+	or download from <a href="https://video.fosdem.org/2020/">video.fosdem.org/2020</a>
+	(arranged by room name).  Later, they will all appear on our 
+	<a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
+	</p>
     </div>
 
     <%
