content, layout: remove URI.escape/encode
This has been deprecated, and it is probably redundant here anyway. See here:
https://github.com/ruby/ruby/commit/238b979f1789f95262a267d8df6239806f2859cc

--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -51,12 +51,10 @@ size = h.values.map(&:size).inject(:+)
 	      <% video_webm = (e[:links] or []).select{|k| k[:url] =~ /\/video.fosdem.org\/.*webm/}.map{|k| k[:url]} %>
 	      <% video_mp4 = (e[:links] or []).select{|k| k[:url] =~ /\/video.fosdem.org\/.*mp4/}.map{|k| k[:url]} %>
 	      <% if not video_webm.empty? %>
-		<% video_webm_url = URI.encode video_webm[0] %>
-		<a href="<%= video_webm_url %>">webm</a>
+		<a href="<%= video_webm[0] %>">webm</a>
 	      <% end %>
 	      <% if not video_mp4.empty? %>
-		<% video_mp4_url = URI.encode video_mp4[0] %>
-		<a href="<%= URI.encode video_mp4[0] %>">mp4</a>
+		<a href="<%= video_mp4[0] %>">mp4</a>
 	      <% end %>
 	    </td>
         </tr>
