Adjust wording for the online edition

--- a/content/about.html
+++ b/content/about.html
@@ -12,8 +12,7 @@ navtitle: About
         widespread use of free and open source software.
     </h3>
     <p>
-        Taking place in the beautiful city of
-        <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM
+        Usually taking place in the beautiful city of Brussels (Belgium), FOSDEM
         is widely recognised as the best such conference in Europe.
     </p>
   </div>
