--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -14,7 +14,7 @@ sponsors_root: true
 </p>
 
 <p>
-  While FOSDEM is primarily funded by sponsors and the sale of t-shirts onsite,
+  While FOSDEM is primarily funded by sponsors and the sale of t-shirts,
   we also gratefully accept voluntary donations. See our
   <%= l('/support/donate/', 'donations') %> page for more information.
 </p>
