--- a/content/contact.html
+++ b/content/contact.html
@@ -6,8 +6,7 @@ title: Contact
 
 <p>
   There is a <a href="https://lists.fosdem.org/mailman/listinfo/fosdem">mailing list</a> 
-  (and an archive) to help you find accommodation, transportation, etc&hellip; with other
-  FOSDEM visitors.
+  (and an archive) to help you get in touch with other FOSDEM visitors.
 </p>
 
 <p>
