--- a/content/faq.html
+++ b/content/faq.html
@@ -8,22 +8,12 @@ navtitle: FAQ
         <p>No registration is required.</p>
 
         <h5><span class="label label-info">Q:</span> How much does a entry ticket for FOSDEM cost?</h5>
-        <p>Entrance is free, including access to all talks and facilities.</p>
+        <p>Attendance is free, including access to all talks and facilities.</p>
 
         <h5><span class="label label-info">Q:</span> If entrance to FOSDEM is free, who pays the expenses?</h5>
         <p>We have two sources of income: <a href="page:/support/donate/">donations</a> from our visitors and <a href="page:/about/sponsors/">sponsorship</a>.</p>
 
         <h5><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h5>
         <p>Have a look at the <a href="page:/about/sponsors/">sponsor</a> page.</p>
-
-        <h5><span class="label label-info">Q:</span> I need a formal invitation for a VISA request</h5>
-        <p>For legal reasons, the FOSDEM organization can only issue such letters of invitation to “main track” speakers for whom we also make travel and hotel arrangements.</p>
-
-        <p>If you are attending FOSDEM as part of your involvement with a project represented at our conference, we recommend you get in touch with someone you know locally who is involved in the project and ask them to invite you.</p>
-
-        <p>For information regarding Belgian visa requirements, we refer you to <a href="https://diplomatie.belgium.be/en/services/travel_to_belgium/visa_for_belgium">Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation website</a></p>
-
-        <h5><span class="label label-info">Q:</span> I need proof I have been to FOSDEM for my studies, my job, travel reimbursement or other reasons</h5>
-        <p>Come to the infodesk and make a <a href="page:/support/donate/">donation</a>. You will get a stamped receipt with your name on it. This is widely accepted for these purposes.</p>
     </div>
 </div>
