--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -3,13 +3,12 @@ title: Donate to FOSDEM
 navtitle: Donate
 ---
 <p>
-  While FOSDEM is primarily funded by sponsors and the sale of t-shirts on-site,
+  While FOSDEM is primarily funded by sponsors and the sale of t-shirts,
   we also gratefully accept voluntary donations.
 </p>
 
 <p>
-  Please note donations are not tax-deductible. Refunds are not possible. Only
-  donations made on-site are rewarded with a t-shirt.
+  Please note donations are not tax-deductible. Refunds are not possible.
 </p>
 
 <h2>How?</h2>
