--- a/content/schedule/devrooms/emulator_development.html
+++ b/content/schedule/devrooms/emulator_development.html
@@ -1,30 +1,8 @@
 <p>
-    So what are emulators<br>
     Wikipedia:<br>
     <i>In computing, an emulator is hardware or software that enables one computer system (called the host) to behave
         like another computer system (called the guest).</i><br>
 </p>
 <p>
-    What's this room about then?<br>
-    From our <a href="https://github.com/blackbeard334/fosdem21-emulator-devroom-cfp">CFP</a>:<br>
-<ul type="square">
-    <li>Console emulator development</li>
-    <li>Computer emulator development</li>
-    <li>Hardware emulation</li>
-    <li>OS emulation development</li>
-    <li>Virtual Machines development</li>
-    <li>...and more</li>
-</ul>
-</p>
-<p>
-    Why should you speak in this room<br>
-    We all stand on the shoulders of giants, and in helping others, we join their ranks :)<br>
-    <br>
-    Plus sharing your knowledge is a great experience.
-</p>
-<p>
-    Why should you attend<br>
-    To learn about some cool (hobby) projects, and the fun stuff that goes into making them.<br>
-    And to (virtually)meet the faces behind these innovative endeavors.
-    <br>
+    In this room we discuss anything and everything that relates to software or hardware emulator development.
 </p>
